--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="estilo.css">
 </head>
 <body>
-    <h1>Welcome to my World most beatefull</h1>
+    <h1>Welcome to my World --- por fin logré hacerlo locoooooo</h1>
     <div id="theme">
         <h2>Este es el tema de hoy: La salud</h2>
     </div>
