--- a/index.html
+++ b/index.html
@@ -4,21 +4,22 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Aqua</title>
-    <link rel="stylesheet" href="estilo.css">
+    <title>Bienvenido a Hyperblog 2.0</title>
+    <link rel="stylesheet" href="css/estilo.css">
 </head>
 <body>
-    <h1>Welcome to my World --- por fin logré hacerlo locoooooo</h1>
-    <div id="theme">
-        <h2>Este es el tema de hoy: La salud</h2>
-    </div>
-    <div id="comment">
-        <p>name: shawn<br>
-            your blog is so good.
-        </p>
-    </div>
-    <div id="proof">
-        <p>proof pe</p>
+    <div id="container">
+        <div id="cabecera">
+            <img id="logo" src="imagenes/dragon.png" />
+            Hyperblog
+            <span id="tagline">Tu blog de cabecera</span>
+        </div>
+        <div id="post">
+            <h1>Este es el título atractivo e interesante del post</h1>
+            <p>Y este es el parrafo de inicio donde vamos a explicar las cosas increéibles que se pueden hacer con ramas</p>
+            <p>Los blogs son la mejor forma de compartir información y tus ideas. Mucho mas que ir a conferencias o salir en Youtube. Excepto si eres un rockstar. Pero estadísticamente no lo eres.... por ahora.</p>
+            <p>Suscribete y dale like</p>
+        </div>
     </div>
 </body>
 </html>
