--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
     <div id="container">
         <div id="cabecera">
-            <img id="logo" src="imagenes/dragon.png" />
+            <img id="logo" src="https://i.ibb.co/sQ3GH7F/dragon.png" />
             Hyperblog
             <span id="tagline">Tu blog de cabecera</span>
         </div>
