change Aqua for Ryuukumo

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
             <p>Suscribete y dale like</p>
         </div>
         <div id="footer">
-            Hecho con amor por Aqua 💚
+            Hecho con amor por RyuuKumo 💚
         </div>
     </div>
 </body>
