--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
             <p>Los blogs son la mejor forma de compartir información y tus ideas. Mucho mas que ir a conferencias o salir en Youtube. Excepto si eres un rockstar. Pero estadísticamente no lo eres.... por ahora.</p>
             <p><img src="imagenes/tokyo.jpg" alt="image" width="100%" ></p>
             <p>Suscribete y dale like</p>
+            <p>Saludos para Mickey Mouse</p>
         </div>
         <div id="footer">
             Hecho con amor por RyuuKumo 💚
